optimized for search engine

--- a/photo.html
+++ b/photo.html
@@ -13,9 +13,9 @@
     <h1>🥐 A picture of a croissant</h1>
     <img src="images/croissant.jpg" alt="Photo of croissant" />
     <footer>
-        <a href="/">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+        <a href="/contact.html" title="Contact Croissant.com">Contact</a>
     </footer>
 </body>
 
