--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us - Croissant</title>
     <link href="styles/styles.css" rel="stylesheet" />
+    <meta name="description" content="Contact croissant.com to learn more about our homemade croissants">
 </head>
 
 <body>
@@ -14,9 +15,9 @@
     <p>To contact croissant.com, please email us at <a href="mailto:hello@croissant.com">hello@croissant.com</a> for
         more info</p>
     <footer>
-        <a href="/">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+        <a href="/contact.html" title="Contact Croissant.com">Contact</a>
     </footer>
 </body>
 
