--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The best croissant in New York - Croissant</title>
     <link href="styles/styles.css" rel="stylesheet" />
+    <meta name="description" content="Taste the best croissant in town">
+    <meta name="description" content="Enjoy a beautiful picture of a homemade croissant">
 </head>
 
 <body>
@@ -14,9 +16,9 @@
     <p>A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin, named for its historical crescent shape.
         Croissants and other viennoiserie are made of a layered yeast-leavened dough </p>
     <footer>
-        <a href="/">Homepage</a>
-        <a href="/photo.html">Photo</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo.html" title="Croissant photo">Photo</a>
+        <a href="/contact.html" title="Contact Croissant.com">Contact</a>
     </footer>
 </body>
 
