--- a/photo.html
+++ b/photo.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>An example of the perfect croissant - Croissant</title>
     <link href="styles/styles.css" rel="stylesheet" />
+    <meta name="description" content="Enjoy a beautiful picture of a homemade croissant">
 </head>
 
 <body>
